# llvm-toolchain-builder

./: .gitignore
.github/: copilot-instructions.md
.github/actions/build-tool/: action.yml
.github/actions/ensure-docker/: action.yml
.github/actions/install-git-arm64/: action.yml
.github/actions/install-pwsh-arm64/: action.yml
.github/actions/install-vs-buildtools-arm64/: action.yml
.github/workflows/: _bundle.yml  build-toolchain-arm64.yml  build-toolchain-win-arm64.yml  build-toolchain-win.yml  build-toolchain.yml  ci-fixer.lock.yml  ci-fixer.md
scripts/: install-git.sh
scripts/bootstrap/: common-bootstrap.sh
scripts/common/: llvm-config-stage2.sh  llvm-config.sh  post-install.sh  scaffold-toolchain.sh  tool-versions.sh  verify-lib.sh  verify-third-party.sh  verify-toolchain.sh  verify-tools.sh
scripts/common/build-sysroots/: lib.sh  linux-gnu.sh  linux-musl.sh  mingw64.sh  wasi.sh
scripts/common/build-tools/: _download.sh  git.sh  (+22 more)
scripts/linux/: build-sysroots.sh  build-tools.sh  verify-portability.sh
scripts/linux-arm64/: build-llvm-stage2.sh
scripts/linux-x64/: build-llvm-stage2.sh
scripts/ubuntu-16.04/: bootstrap.sh  verify-portability.sh
scripts/windows-x64/: build-llvm-stage2.ps1  build-llvm.ps1
templates/main/: README.md  toolchain.json
templates/p2996/: README.md  toolchain.json
templates/shared/: setup.py  setup.sh
templates/shared/tests/fixtures/rust_interop/: CMakeLists.txt  main.cpp
templates/shared/tests/fixtures/rust_interop/mylib-rs/: Cargo.toml
templates/shared/tests/fixtures/rust_interop/mylib-rs/src/: lib.rs
(+37 files in other folders)
